# revenue-maximization-ranking

./: .gitignore  README.md  environment.yml  requirements.txt  setup.cfg
.github/workflows/: deployments.yml  tests.yml
notebooks/: Best x Example.ipynb  uat_deployment_proof.ipynb
src/revenue_maximization_ranking/: __init__.py  _types.py
src/revenue_maximization_ranking/cascade/: __init__.py  best_x.py  dataframe.py  fixed_attention.py  revenue.py
src/tests/test_cascade/: test_fixed_attention.py  test_revenue.py
