[metadata]
name = revenue-maximization-ranking
version = 0.0.1
author = Nicolás Agustín Rodriguez Castro
author_email = nicorodc@gmail.com
description = Rankings for revenue maximization
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/taurusongithub/revenue-maximization-ranking
project_urls =
    Bug Tracker = https://github.com/taurusongithub/revenue-maximization-ranking/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3

[options.packages.find]
where = src